--- a/main.css
+++ b/main.css
@@ -42,3 +42,17 @@ body{
 .btn_red{
     background-color: red;
 }
+
+.input{
+    padding: 12px 20px;
+    margin: 8px 0;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.input_box{
+    height: 50px;
+    width: 300px;
+    border-radius: 1rem;
+}
